Corrected wrong visibility value (was none should be hidden)

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -321,7 +321,7 @@ Full-Width Styles
   right: 0;
   height: 70px;
   background: url('../images/icon_download.png') no-repeat 0% 90%;
-  visibility: none;
+  visibility: hidden;
 }
 
 .zip_download_link {
